Thu Mar 17 07:32:34 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
        * ace/OS_NS_stdlib.inl:
        * ace/OS_NS_stdlib.cpp:
          Changed rand_r() API to conform POSIX.

        * ace/config-freebsd.h:
        * ace/config-openbsd.h:
        * ace/config-openvms.h:
        * ace/config-rtems.h:
        * ace/config-vxworks6.4.h:
        * ace/config-win32-common.h:
          Added/removed some defines due to change above.

Thu Mar 17 07:20:50 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-WinCE.h:
          Added ACE_LACKS_STRTOK_R.

Thu Mar 17 04:58:19 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-lion.h:
        * include/makeinclude/platform_macosx_lion.GNU:
        * include/makeinclude/platform_macosx_snowleopard.GNU:

          Updated to Mac config/platform files.

Thu Mar 17 04:55:30 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/fuzz.pl:

          Added check at level 6 for numeric log priorities in DAnCE.

Wed Mar 16 14:34:57 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/os_include/os_pwd.h:
          Removed legacy _posix_getpwnam_r() declaration.

Wed Mar 16 14:27:15 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_pwd.inl:
        * ace/config-lynxos.h:
          Renamed ACE_HAS_NONSTD_GETPWNAM_R to ACE_HAS_LYNXOS4_GETPWNAM_R
          since LynxOS 4.x is the only platform that has nonstandard
          getpwnam_r() implementation.

Wed Mar 16 14:12:56 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-win32-msvc-7.h:
          Added ACE_LACKS_STRTOK_R ACE_LACKS_LOCALTIME_R.

Wed Mar 16 14:00:26 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_time.cpp:
          Rearranged localtime_r() code to eliminate macro
          ACE_HAS_REENTRANT_FUNCTIONS.

        * ace/config-win32-mingw.h:
          Added ACE_LACKS_STRTOK_R ACE_LACKS_LOCALTIME_R.

Wed Mar 16 13:49:11 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
