@@ -261,9 +261,6 @@ ACE_HAS_BROKEN_NESTED_TEMPLATES         MSVC has trouble with defining
                                         structs and classes
 ACE_HAS_BROKEN_POSIX_TIME               Platform defines struct
                                         timespec in <sys/timers.h>
-ACE_HAS_BROKEN_RANDR                    OS/compiler's header files are
-                                        inconsistent with libC
-                                        definition of rand_r().
 ACE_HAS_BROKEN_T_ERROR                  Compiler/platform has the wrong
                                         prototype for t_error(), i.e.,
                                         t_error(char *) rather than
@@ -958,7 +955,6 @@ ACE_LACKS_PWD_REENTRANT_FUNCTIONS       Platform lacks getpwnam_r()
 ACE_LACKS_QSORT                         Compiler/platform lacks the
                                         standard C library qsort()
                                         function
-ACE_LACKS_RAND_REENTRANT_FUNCTIONS      Platform lacks rand_r()
 ACE_LACKS_READLINK                      Platform lacks the readlink() function.
 ACE_LACKS_READV                         Platform doesn't define readv,
                                         so use our own
